--- a/styles/index.scss
+++ b/styles/index.scss
@@ -518,15 +518,17 @@ main {
                     display:flex;
                     justify-content: space-between;
                     align-items: center;
-                    padding:.8rem 1rem; 
+                    padding:.25rem 1rem; 
                     width:900px;
                     margin:0 auto;
                     @include media('<desktop'){
                         width:100%;
                     }
                     &__description{
+                        max-width:88%;
                         @include media('<desktop'){
                             margin-left:.5rem;
+                            max-width:100%;
                         }
                         h3{
                             color:$blue;
